{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 29,
  "lineage": "0c7f649d-d5b8-6d5b-2aaf-e3b626c7b539",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "redshift_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706721111266:security-group/sg-0f5c8f2795b8cca70",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f5c8f2795b8cca70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redshift Port",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "706721111266",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-071b41d1f13c87ce6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.redshift-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "redshift-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706721111266:internet-gateway/igw-0ca7a026f5fd33c27",
            "id": "igw-0ca7a026f5fd33c27",
            "owner_id": "706721111266",
            "vpc_id": "vpc-071b41d1f13c87ce6"
          },
          "dependencies": [
            "aws_vpc.redshift-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift-rt-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706721111266:route-table/rtb-047125bb4b91d4fc1",
            "id": "rtb-047125bb4b91d4fc1",
            "owner_id": "706721111266",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca7a026f5fd33c27",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071b41d1f13c87ce6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.redshift-igw",
            "aws_vpc.redshift-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift-subnet-rt-association-igw-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dd6db1b1d1bd5df",
            "route_table_id": "rtb-047125bb4b91d4fc1",
            "subnet_id": "subnet-0156b0f310bd6de74"
          },
          "dependencies": [
            "aws_internet_gateway.redshift-igw",
            "aws_route_table.redshift-rt-igw",
            "aws_subnet.redshift-subnet-az1",
            "aws_vpc.redshift-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift-subnet-rt-association-igw-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02febd10dacf3df3f",
            "route_table_id": "rtb-047125bb4b91d4fc1",
            "subnet_id": "subnet-060f71ce55709e841"
          },
          "dependencies": [
            "aws_internet_gateway.redshift-igw",
            "aws_route_table.redshift-rt-igw",
            "aws_subnet.redshift-subnet-az2",
            "aws_vpc.redshift-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706721111266:subnet/subnet-0156b0f310bd6de74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0156b0f310bd6de74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706721111266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-071b41d1f13c87ce6"
          },
          "dependencies": [
            "aws_vpc.redshift-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706721111266:subnet/subnet-060f71ce55709e841",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060f71ce55709e841",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706721111266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-071b41d1f13c87ce6"
          },
          "dependencies": [
            "aws_vpc.redshift-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "redshift-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:706721111266:vpc/vpc-071b41d1f13c87ce6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-000915473af6e8579",
            "default_route_table_id": "rtb-04c92f189e14229b6",
            "default_security_group_id": "sg-0f5c8f2795b8cca70",
            "dhcp_options_id": "dopt-0462945dc93618fa1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071b41d1f13c87ce6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c92f189e14229b6",
            "owner_id": "706721111266"
          }
        }
      ]
    }
  ]
}